# nn-toybox

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: smoke.yml
core/: __init__.py  arcade_style.py  arcade_view.py  checkpoints.py  config.py  cycling.py  datasets.py  digits8.py  generated_2d.py  generated_icons.py  plotting.py  registry.py  shared_config.py  torch_utils.py  utils.py
demos/: __init__.py
demos/attend/: README.md  __init__.py  config.py  data.py  model.py  renderer.py  trainer.py
demos/autoencode/: README.md  __init__.py  config.py  data.py  model.py  renderer.py  trainer.py
demos/conv/: README.md  __init__.py  config.py  model.py  renderer.py  trainer.py
demos/diffuse/: README.md  __init__.py  config.py  data.py  model.py  renderer.py  trainer.py
demos/embed/: README.md  __init__.py  config.py  data.py  model.py  renderer.py  trainer.py
demos/encode/: README.md  __init__.py  config.py  data.py  model.py  renderer.py  trainer.py
demos/grad/: README.md  __init__.py  config.py  data.py  model.py  renderer.py  trainer.py
demos/optim/: README.md  __init__.py  config.py  data.py  renderer.py  trainer.py
demos/trace/: README.md  __init__.py  config.py  model.py  renderer.py  trainer.py
docs/: visual-language.md
nn_toybox/: __init__.py  display.py  run.py
nn_toybox/shared/: __init__.py  digits8.py
scripts/: __init__.py  capture_demo.py  display.py  run.py  smoke.py  train.py  view.py
tests/: __init__.py  test_v2_smoke.py
