[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-toybox"
version = "0.1.0"
description = "Tiny visual neural-network toybox in PyTorch + Arcade."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arcade>=3.3.3",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pillow>=10",
  "torch>=2.2",
]

[project.scripts]
nn-toybox-run = "scripts.run:main"
nn-toybox-display = "scripts.display:main"
nn-toybox-capture-demo = "scripts.capture_demo:main"
nn-toybox-smoke = "scripts.smoke:main"

[project.optional-dependencies]
dev = [
  "black>=24",
  "pytest>=8",
  "ruff>=0.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["assets*", "core*", "scripts*", "demos*"]
namespaces = true

[tool.setuptools.package-data]
assets = ["*.zip"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
